fix: fixed a layout issue, when post title is too long it wont wrap

--- a/static/css/post_detail.css
+++ b/static/css/post_detail.css
@@ -11,5 +11,5 @@
 }
 .post-image {
     width: 100%;
-    object-fit: fill;
+    object-fit: contain;
 }
